# Engine

./: .gitignore  CMakeLists.txt  Engine.c  Engine.cpp  LICENSE  Makefile  README  README.md  engine.c  reference.c  support.h
helpers/: support.h
legacy/: Makefile  libxcb.c  platform.c  shader.frag  shader.vert
libraries/: device_support.h  gltf_loader.h  stb_image.h  tinyobj_loader_c.h
references/: cast.c
shaders/: frag.spv  shader.frag  shader.vert  vert.spv
