cmake_minimum_required(VERSION 3.13)
project(Engine)
add_executable (Engine "Engine.c")
find_package(Vulkan REQUIRED)
target_link_libraries(Engine Vulkan::Vulkan)
target_include_directories(Engine PRIVATE Vulkan::Vulkan)
if(WIN32)
	target_compile_definitions(vulkaninfo PRIVATE VK_USE_PLATFORM_WIN32_KHR)
endif()
if(UNIX AND NOT APPLE)
	target_link_libraries(Engine -lxcb)
endif()
