cmake_minimum_required(VERSION 3.12)
project(Engine)
add_executable (Engine "engine.c")
find_package(Vulkan REQUIRED)
target_link_libraries(Engine Vulkan::Vulkan)
target_include_directories(Engine PRIVATE Vulkan::Vulkan)
if(WIN32)
	target_compile_definitions(Engine PRIVATE VK_USE_PLATFORM_WIN32_KHR)
	add_compile_definitions(_CRT_SECURE_NO_WARNINGS)
endif()
if(UNIX AND NOT APPLE)
	target_link_libraries(Engine -lxcb)
	target_compile_options(Engine PRIVATE -Ofast)
endif()
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/shaders DESTINATION ${CMAKE_CURRENT_BINARY_DIR})
